# python-bazel-docker-demo

./: .bazelrc  .gitignore  README.md  WORKSPACE  requirements.in  requirements.txt
.github/workflows/: build.yml
app/: BUILD.bazel  README.md  pyproject.toml
app/app/: BUILD.bazel  main.py
demo/: README.md  pyproject.toml
demo/app/: BUILD.bazel
fibonacci/: .gitignore  BUILD.bazel  README.md  app.py  hello.py  pyproject.toml  start-app.sh
fibonacci/fibonacci/: __init__.py
fibonacci/main/: BUILD.bazel  flask_main.py
fibonacci/tests/: BUILD.bazel  test_fibonacci.py
pytest/: pyproject.toml
