load("@rules_python//python:defs.bzl", "py_binary")
load("@poetry//:dependencies.bzl", "dependency")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")
load("@bazel_skylib//rules:copy_file.bzl", "copy_file")

py_binary(
  name = "app",
  main = "main.py",
  srcs = [ "main.py" ],
  deps = [
    dependency("colorama"),
  ],
)

pkg_tar(
  name = "runfiles",
  srcs = [
    ":app",
  ],
  extension = "tar.gz",
  include_runfiles = True,
  package_dir = "app.runfiles/__main__",
  symlinks = {
    "app.runfiles/bazel_tools": "__main__/external/bazel_tools",
    "app.runfiles/poetry_app": "__main__/external/poetry_app",
  },
  strip_prefix = "/",
)

pkg_tar(
  name = "tar",
  srcs = [
    ":app",
  ],
  extension = "tar.gz",
  include_runfiles = False,
  package_dir = "/opt/app",
  deps = [
    ":runfiles",
  ],
)

container_image(
  name = "image",
  base = "@python//image",
  tars = [
    ":tar",
  ],
  cmd = [ 
    "/opt/app/app",
  ],
)

copy_file(
  name = "image_tar",
  src = ":image.tar",
  out = "app.tar",
  is_executable = False,
  allow_symlink = True,
)
