load("@pypi_deps//:requirements.bzl", "requirement")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_python//python:defs.bzl", "py_library", "py_binary")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")
load("@bazel_skylib//rules:copy_file.bzl", "copy_file")

py_library(
  name = "fibonacci",
  srcs = glob([
    "fibonacci/*.py",
  ]),
  imports = ["."],
  deps = [
    requirement("colorama"),
  ],
  visibility = ["//visibility:public"],
)

py_binary(
  name = "hello",
  srcs = [
    "hello.py",
  ],
  main = "hello.py",
  deps = [
    ":fibonacci",
  ],
  imports = ["."],
  legacy_create_init = False,
  visibility = ["//visibility:public"],
)

sh_binary(
    name = "app",
    srcs = ["start-app.sh"],
    data = [
        "//fibonacci/main:flask_main",
    ],
    deps = [
        "@bazel_tools//tools/bash/runfiles",
    ],
    visibility = ["//visibility:public"],
)

pkg_tar(
  name = "app_runfiles",
  srcs = [
    ":app",
  ],
  extension = "tar.gz",
  include_runfiles = True,
  package_dir = "app.runfiles/__main__/" + package_name(),
  strip_prefix = ".",
)

pkg_tar(
  name = "root_runfiles",
  srcs = [
    ":app",
  ],
  extension = "tar.gz",
  include_runfiles = True,
  package_dir = "app.runfiles/__main__",
  strip_prefix = ".",
  symlinks = {
    "app.runfiles/bazel_tools": "__main__/external/bazel_tools",
    "app.runfiles/pypi_deps_blinker": "__main__/external/pypi_deps_blinker",
    "app.runfiles/pypi_deps_click": "__main__/external/pypi_deps_click",
    "app.runfiles/pypi_deps_colorama": "__main__/external/pypi_deps_colorama",
    "app.runfiles/pypi_deps_flask": "__main__/external/pypi_deps_flask",
    "app.runfiles/pypi_deps_importlib_metadata": "__main__/external/pypi_deps_importlib_metadata",
    "app.runfiles/pypi_deps_itsdangerous": "__main__/external/pypi_deps_itsdangerous",
    "app.runfiles/pypi_deps_jinja2": "__main__/external/pypi_deps_jinja2",
    "app.runfiles/pypi_deps_markupsafe": "__main__/external/pypi_deps_markupsafe",
    "app.runfiles/pypi_deps_werkzeug": "__main__/external/pypi_deps_werkzeug",
    "app.runfiles/pypi_deps_zipp": "__main__/external/pypi_deps_zipp",
    "app.runfiles/python3_9_x86_64-apple-darwin": "__main__/external/python3_9_x86_64-apple-darwin",
  },
)

pkg_tar(
  name = "app_without_runfiles",
  srcs = [
    ":app",
  ],
  extension = "tar.gz",
  include_runfiles = False,
  strip_prefix = ".",
)

pkg_tar(
  name = "app_bundle",
  deps = [
    ":app_without_runfiles",
    ":app_runfiles",
    ":root_runfiles",
  ],
  extension = "tar.gz",
  include_runfiles = False,
  package_dir = "/opt/app",
  strip_prefix = ".",
)

container_image(
  name = "image",
  base = "@python//image",
  tars = [
    ":app_bundle",
  ],
  cmd = [
    "/opt/app/app",
  ],
)
